# PicSort

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.py  conanfile.py  configure.py  vcpkg.json  xcode.sh
src/: CMakeLists.txt  GuiWindow.cpp  GuiWindow.hpp  main.cpp  picfix.cpp  picsort.cpp
src/imgui/: Fonts.hpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
